[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastweb3-objects"
version = "0.1.0"
description = "High-level objects built on fastweb3."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "iamdefinitelyahuman" }
]

dependencies = [
    "eth-stdlib>=0.2.7,<0.3",
    "fastweb3>=0.1.4,<0.2.0",
    "fastweb3-keypass>=0.1.2,<0.2.0",
    "pycryptodome>=3.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.9",
    "pre-commit>=3",
    "build",
    "twine",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/iamdefinitelyahuman/fastweb3-objects"
Repository = "https://github.com/iamdefinitelyahuman/fastweb3-objects"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = [
  "--cov=fw3_objects",
  "--cov-report=term-missing",
  "--cov-report=xml",
]
testpaths = ["tests"]